applications portal integration

--- a/codbex-countries/gen/ui/countries/index.html
+++ b/codbex-countries/gen/ui/countries/index.html
@@ -31,7 +31,7 @@
         <script type="text/javascript">
             angular.module('app', ['ngResource', 'ideLayout', 'ideUI'])
                 .constant('branding', {
-                    name: 'Countries Management Module',
+                    name: 'Countries Management Application',
                     brand: 'codbex',
                     brandUrl: 'https://codbex.com',
                     icons: {
