--- a/codbex-countries/gen/index.html
+++ b/codbex-countries/gen/index.html
@@ -25,7 +25,7 @@
         <ide-header menu-ext-id="codbex-countries-menu"></ide-header>
 
         <ide-container>
-            <view id="home-launchpad"></view>
+            <view id="codbex-countries-home-launchpad"></view>
         </ide-container>
 
         <ide-dialogs></ide-dialogs>
@@ -34,7 +34,7 @@
         <script type="text/javascript">
             angular.module('app', ['ngResource', 'ideLayout', 'ideUI'])
                 .constant('branding', {
-                    name: 'Countries Management Module',
+                    name: 'Countries Management Application',
                     brand: 'codbex',
                     brandUrl: 'https://codbex.com',
                     icons: {
