New templates regeneration

--- a/codbex-countries/gen/ui/Countries/Country/dialog-window/index.html
+++ b/codbex-countries/gen/ui/Countries/Country/dialog-window/index.html
@@ -45,7 +45,7 @@
 	                                type="text"
 	                                placeholder="Enter Name">
 	                            </fd-input>
-	                            <fd-form-message dg-type="error">Incorrect Input</fd-form-message>
+	                            <fd-form-message dg-type="error">The value doesn't match the required pattern ''</fd-form-message>
 	                        </fd-form-input-message-group>
 	                    </div>
                     </fd-form-item>
@@ -67,7 +67,7 @@
 	                                type="text"
 	                                placeholder="Enter Code2">
 	                            </fd-input>
-	                            <fd-form-message dg-type="error">Incorrect Input</fd-form-message>
+	                            <fd-form-message dg-type="error">The value doesn't match the required pattern ''</fd-form-message>
 	                        </fd-form-input-message-group>
 	                    </div>
                     </fd-form-item>
@@ -89,7 +89,7 @@
 	                                type="text"
 	                                placeholder="Enter Code3">
 	                            </fd-input>
-	                            <fd-form-message dg-type="error">Incorrect Input</fd-form-message>
+	                            <fd-form-message dg-type="error">The value doesn't match the required pattern ''</fd-form-message>
 	                        </fd-form-input-message-group>
 	                    </div>
                     </fd-form-item>
@@ -111,7 +111,7 @@
 	                                type="text"
 	                                placeholder="Enter Numeric">
 	                            </fd-input>
-	                            <fd-form-message dg-type="error">Incorrect Input</fd-form-message>
+	                            <fd-form-message dg-type="error">The value doesn't match the required pattern ''</fd-form-message>
 	                        </fd-form-input-message-group>
 	                    </div>
                     </fd-form-item>
