refactor module:  - add roles to navigations  - add roles to entities

--- a/codbex-countries/gen/codbex-countries/index.html
+++ b/codbex-countries/gen/codbex-countries/index.html
@@ -49,7 +49,7 @@
                 .constant('extensionPoint', {
                     perspectives: "codbex-countries",
                     views: "codbex-countries-view",
-                    dialogWindows: "codbex-countries-dialog-window"
+                    dialogWindows: "dialog-window"
                 })
                 .config(["messageHubProvider", function (messageHubProvider) {
                     messageHubProvider.eventIdPrefix = 'codbex-countries.launchpad.Home';
