--- a/codbex-countries/gen/codbex-countries/ui/Settings/Country/dialog-filter/index.html
+++ b/codbex-countries/gen/codbex-countries/ui/Settings/Country/dialog-filter/index.html
@@ -17,71 +17,71 @@
             <bk-message-strip class="fd-margin--md" ng-show="errorMessage" glyph="sap-icon--message-error" state="error" on-dismiss="clearErrorMessage()">{{ errorMessage }}</bk-message-strip>
 
             <bk-fieldset class="fd-padding-begin-end--sm" ng-form="forms.details">
-                <bk-form-group label="Country Filter" name="entityForm" transclude-classes="fd-container fd-form-layout-grid-container">
+                <bk-form-group label="{{ 'codbex-countries:codbex-countries-model.defaults.formGrpFilter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY)'} }}" name="entityForm" transclude-classes="fd-container fd-form-layout-grid-container">
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idName" colon="true">Name</bk-form-label>
+                        	<bk-form-label for="idName" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_NAME' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--8">
-							<bk-form-input-message state="{{ forms.details['Name'].$valid ? '' : 'error' }}" message="'Incorrect Input'">
+							<bk-form-input-message state="{{ forms.details['Name'].$valid ? '' : 'error' }}" text="{{'codbex-countries:codbex-countries-model.messages.error.incorrectInput' | t}}">
 								<bk-input id="idName"
 	                                name="Name"
 	                                state="{{ forms.details['Name'].$valid ? '' : 'error' }}"
 	                                ng-model="entity.Name"
 									ng-maxlength="20.0"
 	                                type="text"
-	                                placeholder="Enter Name">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_NAME)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
                     </bk-form-item>
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idCode2" colon="true">Code2</bk-form-label>
+                        	<bk-form-label for="idCode2" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_CODE2' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--8">
-							<bk-form-input-message state="{{ forms.details['Code2'].$valid ? '' : 'error' }}" message="'Incorrect Input'">
+							<bk-form-input-message state="{{ forms.details['Code2'].$valid ? '' : 'error' }}" text="{{'codbex-countries:codbex-countries-model.messages.error.incorrectInput' | t}}">
 								<bk-input id="idCode2"
 	                                name="Code2"
 	                                state="{{ forms.details['Code2'].$valid ? '' : 'error' }}"
 	                                ng-model="entity.Code2"
 									ng-maxlength="2.0"
 	                                type="text"
-	                                placeholder="Enter Code2">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_CODE2)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
                     </bk-form-item>
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idCode3" colon="true">Code3</bk-form-label>
+                        	<bk-form-label for="idCode3" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_CODE3' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--8">
-							<bk-form-input-message state="{{ forms.details['Code3'].$valid ? '' : 'error' }}" message="'Incorrect Input'">
+							<bk-form-input-message state="{{ forms.details['Code3'].$valid ? '' : 'error' }}" text="{{'codbex-countries:codbex-countries-model.messages.error.incorrectInput' | t}}">
 								<bk-input id="idCode3"
 	                                name="Code3"
 	                                state="{{ forms.details['Code3'].$valid ? '' : 'error' }}"
 	                                ng-model="entity.Code3"
 									ng-maxlength="3.0"
 	                                type="text"
-	                                placeholder="Enter Code3">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_CODE3)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
                     </bk-form-item>
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idNumeric" colon="true">Numeric</bk-form-label>
+                        	<bk-form-label for="idNumeric" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_NUMERIC' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--8">
-							<bk-form-input-message state="{{ forms.details['Numeric'].$valid ? '' : 'error' }}" message="'Incorrect Input'">
+							<bk-form-input-message state="{{ forms.details['Numeric'].$valid ? '' : 'error' }}" text="{{'codbex-countries:codbex-countries-model.messages.error.incorrectInput' | t}}">
 								<bk-input id="idNumeric"
 	                                name="Numeric"
 	                                state="{{ forms.details['Numeric'].$valid ? '' : 'error' }}"
 	                                ng-model="entity.Numeric"
 									ng-maxlength="3.0"
 	                                type="text"
-	                                placeholder="Enter Numeric">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_NUMERIC)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
@@ -93,13 +93,13 @@
 		<bk-bar bar-design="footer" compact="true" ng-show="action !== 'select'">
 			<bk-bar-right>
 				<bk-bar-element>
-					<bk-button label="Filter" state="emphasized" ng-click="filter()"></bk-button>
+					<bk-button label="{{ 'codbex-countries:codbex-countries-model.defaults.filter' | t }}" state="emphasized" ng-click="filter()"></bk-button>
 				</bk-bar-element>
 				<bk-bar-element>
-					<bk-button label="Reset" ng-click="resetFilter()"></bk-button>
+					<bk-button label="{{ 'codbex-countries:codbex-countries-model.defaults.reset' | t }}" ng-click="resetFilter()"></bk-button>
 				</bk-bar-element>
 				<bk-bar-element>
-					<bk-button label="Cancel" ng-click="cancel()"></bk-button>
+					<bk-button label="{{ 'codbex-countries:codbex-countries-model.defaults.cancel' | t }}" ng-click="cancel()"></bk-button>
 				</bk-bar-element>
 			</bk-bar-right>
 		</bk-bar>
