--- a/codbex-countries/gen/codbex-countries/ui/Settings/Country/dialog-window/index.html
+++ b/codbex-countries/gen/codbex-countries/ui/Settings/Country/dialog-window/index.html
@@ -21,10 +21,10 @@
                 <bk-form-group label="{{formHeaders[action]}}" name="entityForm" transclude-classes="fd-container fd-form-layout-grid-container">
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idName" ng-required="false" colon="true">Name</bk-form-label>
+                        	<bk-form-label for="idName" ng-required="false" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_NAME' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--4 fd-col--6">
-							<bk-form-input-message state="{{ forms.details['Name'].$valid ? '' : 'error' }}" message="'The value doesn\'t match the required pattern: '">
+							<bk-form-input-message state="{{ forms.details['Name'].$valid ? '' : 'error' }}" text="{{ 'codbex-countries:codbex-countries-model.messages.error.pattern' | t:{'rule':''} }}">
 								<bk-input id="idName"
 	                                name="Name"
 	                                state="{{ forms.details['Name'].$valid ? '' : 'error' }}"
@@ -34,17 +34,17 @@
 									ng-maxlength="20.0"
 	                                input-rules="{ patterns: [''] }"
 	                                type="text"
-	                                placeholder="Enter Name">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_NAME)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
                     </bk-form-item>
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idCode2" ng-required="false" colon="true">Code2</bk-form-label>
+                        	<bk-form-label for="idCode2" ng-required="false" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_CODE2' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--2 fd-col--3">
-							<bk-form-input-message state="{{ forms.details['Code2'].$valid ? '' : 'error' }}" message="'The value doesn\'t match the required pattern: '">
+							<bk-form-input-message state="{{ forms.details['Code2'].$valid ? '' : 'error' }}" text="{{ 'codbex-countries:codbex-countries-model.messages.error.pattern' | t:{'rule':''} }}">
 								<bk-input id="idCode2"
 	                                name="Code2"
 	                                state="{{ forms.details['Code2'].$valid ? '' : 'error' }}"
@@ -54,17 +54,17 @@
 									ng-maxlength="2.0"
 	                                input-rules="{ patterns: [''] }"
 	                                type="text"
-	                                placeholder="Enter Code2">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_CODE2)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
                     </bk-form-item>
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idCode3" ng-required="false" colon="true">Code3</bk-form-label>
+                        	<bk-form-label for="idCode3" ng-required="false" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_CODE3' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--2 fd-col--3">
-							<bk-form-input-message state="{{ forms.details['Code3'].$valid ? '' : 'error' }}" message="'The value doesn\'t match the required pattern: '">
+							<bk-form-input-message state="{{ forms.details['Code3'].$valid ? '' : 'error' }}" text="{{ 'codbex-countries:codbex-countries-model.messages.error.pattern' | t:{'rule':''} }}">
 								<bk-input id="idCode3"
 	                                name="Code3"
 	                                state="{{ forms.details['Code3'].$valid ? '' : 'error' }}"
@@ -74,17 +74,17 @@
 									ng-maxlength="3.0"
 	                                input-rules="{ patterns: [''] }"
 	                                type="text"
-	                                placeholder="Enter Code3">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_CODE3)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
                     </bk-form-item>
                     <bk-form-item class="fd-row">
                     	<div class="fd-col fd-col-md--2">
-                        	<bk-form-label for="idNumeric" ng-required="false" colon="true">Numeric</bk-form-label>
+                        	<bk-form-label for="idNumeric" ng-required="false" colon="true">{{ 'codbex-countries:codbex-countries-model.t.COUNTRY_NUMERIC' | t }}</bk-form-label>
                         </div>
                         <div class="fd-col fd-col-md--2 fd-col--3">
-							<bk-form-input-message state="{{ forms.details['Numeric'].$valid ? '' : 'error' }}" message="'The value doesn\'t match the required pattern: '">
+							<bk-form-input-message state="{{ forms.details['Numeric'].$valid ? '' : 'error' }}" text="{{ 'codbex-countries:codbex-countries-model.messages.error.pattern' | t:{'rule':''} }}">
 								<bk-input id="idNumeric"
 	                                name="Numeric"
 	                                state="{{ forms.details['Numeric'].$valid ? '' : 'error' }}"
@@ -94,7 +94,7 @@
 									ng-maxlength="3.0"
 	                                input-rules="{ patterns: [''] }"
 	                                type="text"
-	                                placeholder="Enter Numeric">
+	                                placeholder="{{ 'codbex-countries:codbex-countries-model.messages.inputEnter' | t:{'name':'$t(codbex-countries:codbex-countries-model.t.COUNTRY_NUMERIC)'} }}">
 	                            </bk-input>
 							</bk-form-input-message>
 	                    </div>
@@ -106,10 +106,11 @@
 		<bk-bar bar-design="footer" compact="true" ng-show="action !== 'select'">
 			<bk-bar-right>
 				<bk-bar-element>
-					<bk-button label="{{action === 'create' ? 'Create' : 'Update'}}" state="emphasized" ng-click="action === 'create' ? create() : update()" ng-disabled="!forms.details.$valid"></bk-button>
+					<bk-button ng-if="action === 'create'" label="{{'codbex-countries:codbex-countries-model.defaults.create' | t}}" state="emphasized" ng-click="create()" ng-disabled="!forms.details.$valid"></bk-button>
+					<bk-button ng-if="action !== 'create'" label="{{'codbex-countries:codbex-countries-model.defaults.update' | t}}" state="emphasized" ng-click="update()" ng-disabled="!forms.details.$valid"></bk-button>
 				</bk-bar-element>
 				<bk-bar-element>
-					<bk-button label="Cancel" ng-click="cancel()"></bk-button>
+					<bk-button label="{{ 'codbex-countries:codbex-countries-model.defaults.cancel' | t }}" ng-click="cancel()"></bk-button>
 				</bk-bar-element>
 			</bk-bar-right>
 		</bk-bar>
